# gripper

./: Cargo.toml  crosswin-shell.nix  external_controller_example.py  readme.md  shell.nix
.github/workflows/: publish.yaml
examples/: flexible_tree.rs  random_planner_example.rs
scad/: armlink.stl  base.stl  gripper.stl  phalanx.stl  robot.scad  robot.stl  rotbase.stl
src/: control_demos.rs  gradient_descent_control.rs  graphics.rs  inverse_kinematics.rs  keyboard_control.rs  kinematics.rs  lib.rs  load_mesh.rs  main.rs  multibody_util.rs  physics.rs  robot.rs  simulation.rs  simulator_thread.rs  spawn_utilities.rs  sync_strategies.rs  tcp_controller.rs
src/control_strategies/: demo_flailing.rs  gradient_descent_control.rs  keyboard_control.rs  mod.rs  path_controller.rs  random_tree_planner.rs  tcp_controller.rs  to_angles.rs
src/robot/: joint_map.rs  mod.rs  spawn.rs
