[package]
name = "gripper_experiment"
version = "0.1.0"
authors = ["Werner Kroneman <werner@wernerkroneman.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kiss3d = "0.29.0"
nphysics3d = "0.19.0"
nalgebra = "0.24.0"
stl_io = "0.6.0"
k = "0.21.4"
rand = "0.8.2"

[profile.dev]
opt-level = 0

#[target.x86_64-pc-windows-gnu]
#linker = "/usr/bin/x86_64-w64-mingw32-gcc"
