[package]
name = "gripper_experiment"
version = "0.3.2"
authors = ["Werner Kroneman <werner@wernerkroneman.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kiss3d = "0.29.0"
nphysics3d = "0.19.0"
ncollide3d = "0.27.0"
nalgebra = "0.24.0"
stl_io = "0.6.0"
rand = "0.8.2"
byteorder = "1.4.2"
clap = "3.0.0-beta.2"
generational-arena = "0.2.8"
array-init = "1.0.0"
float-ord = "0.2.0"
splines = { version="3.5.3", features=["impl-nalgebra"] }

[dev-dependencies]
treegen = { git = "https://github.com/werner291/apple-tree-generation.git", branch = "main" }

[profile.dev]
opt-level = 2

#[target.x86_64-pc-windows-gnu]
#linker = "/usr/bin/x86_64-w64-mingw32-gcc"
